image not loading bug solved & performance improved

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,8 +9,8 @@
   <body>
     <main>
       <div class="container">
-        <h1>Chennai Super Kings</h1>
-        <p>Captain - Mahendra Singh Dhoni <span id="sign">Mahendra Singh Dhoni</span></p>
+        <h1>Team Name</h1>
+        <p>Captain - xyz <span id="sign">xyz</span></p>
         <div id="wins-stars">
           <div>IPL Wins</div>
           <div id="stars">
